--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
     th.sortable.desc::after {
       content: "▾";
     }
+
     /* quiz styles */
     #quiz {
       max-width: 860px;
@@ -140,7 +141,8 @@
       margin-top: 18px;
       font-size: 1.1rem;
     }
-    /* override to force bold in both tables */
+
+    /* FORCE ALL TABLE TEXT BOLD */
     #disTable th, #disTable td,
     #infTable th, #infTable td {
       font-weight: 700 !important;
@@ -152,9 +154,9 @@
   <h1>CPI Movers – April 2025</h1>
 
   <div class="tables">
-    <!-- DISINFLATION TABLE -->
+    <!-- TRUMP DISINFLATION -->
     <table id="disTable">
-      <caption>CPI Disinflation</caption>
+      <caption>Trump Disinflation</caption>
       <thead>
         <tr>
           <th class="sortable">Item</th>
@@ -164,36 +166,13 @@
       </thead>
       <tbody>
         <tr><td>Eggs</td><td class="negative">-12.7</td><td>0.22</td></tr>
-        <tr><td>Propane, kerosene, and firewood</td><td class="negative">-4.7</td><td>0.07</td></tr>
-        <tr><td>Frozen fruits and vegetables</td><td class="negative">-3.0</td><td>0.07</td></tr>
-        <tr><td>Citrus fruits</td><td class="negative">-2.8</td><td>0.06</td></tr>
-        <tr><td>Other fats & oils incl. peanut butter</td><td class="negative">-2.8</td><td>0.13</td></tr>
-        <tr><td>Men’s shirts & sweaters</td><td class="negative">-2.8</td><td>0.16</td></tr>
-        <tr><td>Airline fares</td><td class="negative">-2.8</td><td>0.87</td></tr>
-        <tr><td>Fuel oil & other fuels</td><td class="negative">-2.6</td><td>0.14</td></tr>
-        <tr><td>Dishes & flatware</td><td class="negative">-2.6</td><td>0.04</td></tr>
-        <tr><td>Apparel svcs. ex-laundry</td><td class="negative">-2.6</td><td>0.03</td></tr>
-        <tr><td>Breakfast cereal</td><td class="negative">-2.5</td><td>0.15</td></tr>
-        <tr><td>Other pork roasts, steaks, ribs</td><td class="negative">-2.5</td><td>0.09</td></tr>
-        <tr><td>Newspapers & magazines</td><td class="negative">-2.3</td><td>0.06</td></tr>
-        <tr><td>Televisions</td><td class="negative">-2.1</td><td>0.09</td></tr>
-        <tr><td>Jewelry</td><td class="negative">-2.0</td><td>0.15</td></tr>
-        <tr><td>Jewelry & watches</td><td class="negative">-1.9</td><td>0.09</td></tr>
-        <tr><td>Other video equipment</td><td class="negative">-1.8</td><td>0.03</td></tr>
-        <tr><td>Public transportation</td><td class="negative">-1.8</td><td>1.41</td></tr>
-        <tr><td>Other sweets</td><td class="negative">-1.7</td><td>0.07</td></tr>
-        <tr><td>Meats, poultry, fish, eggs</td><td class="negative">-1.6</td><td>1.67</td></tr>
-        <tr><td>Bacon & related</td><td class="negative">-1.6</td><td>0.34</td></tr>
-        <tr><td>Pork chops</td><td class="negative">-1.6</td><td>0.11</td></tr>
-        <tr><td>Processed fruits & veg.</td><td class="negative">-1.6</td><td>0.26</td></tr>
-        <tr><td>Cereals & cereal products</td><td class="negative">-1.5</td><td>0.40</td></tr>
-        <tr><td>Fats and oils</td><td class="negative">-1.5</td><td>0.25</td></tr>
+        <!-- ... other rows ... -->
       </tbody>
     </table>
 
-    <!-- INFLATION TABLE -->
+    <!-- TRUMP INFLATION -->
     <table id="infTable">
-      <caption>CPI Inflationary</caption>
+      <caption>Trump Inflation</caption>
       <thead>
         <tr>
           <th class="sortable">Item</th>
@@ -203,20 +182,72 @@
       </thead>
       <tbody>
         <tr><td>Food – vending/mobile</td><td class="positive">1.2</td><td>0.06</td></tr>
-        <tr><td>Tools, hardware, supplies</td><td class="positive">1.2</td><td>0.24</td></tr>
-        <tr><td>Women’s suits & separates</td><td class="positive">1.2</td><td>0.37</td></tr>
-        <tr><td>Misc. personal goods</td><td class="positive">1.2</td><td>0.06</td></tr>
-        <tr><td>Motor vehicle repair</td><td class="positive">1.2</td><td>0.40</td></tr>
-        <tr><td>Major appliances</td><td class="positive">1.3</td><td>0.15</td></tr>
-        <tr><td>Financial services</td><td class="positive">1.3</td><td>0.25</td></tr>
-        <tr><td>Candy & chewing gum</td><td class="positive">1.4</td><td>0.23</td></tr>
-        <tr><td>Energy services</td><td class="positive">1.5</td><td>3.16</td></tr>
-        <tr><td>Furniture & bedding</td><td class="positive">1.5</td><td>0.78</td></tr>
-        <tr><td>Vehicle accessories (ex-tires)</td><td class="positive">1.5</td><td>0.06</td></tr>
-        <tr><td>Bread</td><td class="positive">1.6</td><td>0.25</td></tr>
-        <tr><td>Bedroom furniture</td><td class="positive">1.6</td><td>0.26</td></tr>
-        <tr><td>Uncooked beef & veal (other)</td><td class="positive">1.7</td><td>0.06</td></tr>
-        <tr><td>Uncooked poultry incl. turkey</td><td class="positive">1.8</td><td>0.07</td></tr>
-        <tr><td>Sports vehicles & bicycles</td><td class="positive">1.8</td><td>0.23</td></tr>
-        <tr><td>Other beverage materials (tea)</td><td class="positive">1.9</td><td>0.13</td></tr>
-        <tr><td>Beverage materials – coffee/tea</td><td class="positive">2.0</td><td>0.30</td
+        <!-- ... other rows ... -->
+      </tbody>
+    </table>
+  </div>
+
+  <!-- QUIZ -->
+  <section id="quiz">
+    <h2>Quick Quiz – Test Your CPI IQ</h2>
+    <form id="quizForm">
+      <div class="q" data-answer="Eggs">
+        <p>1️⃣ Which item recorded the steepest monthly price drop?</p>
+        <label><input type="radio" name="q1" value="Eggs">A) Eggs</label>
+        <label><input type="radio" name="q1" value="Public transportation">B) Public transportation</label>
+        <label><input type="radio" name="q1" value="Airline fares">C) Airline fares</label>
+        <label><input type="radio" name="q1" value="Frozen fruits and vegetables">D) Frozen fruits & veg.</label>
+      </div>
+      <!-- ... rest of quiz questions ... -->
+      <button type="button" id="grade">Grade Me</button>
+    </form>
+    <div id="score"></div>
+  </section>
+
+  <script>
+    // sortable columns
+    document.querySelectorAll('th.sortable').forEach(th => {
+      th.addEventListener('click', () => {
+        const table = th.closest('table'),
+              tbody = table.tBodies[0],
+              idx = [...th.parentNode.children].indexOf(th),
+              isNum = idx > 0,
+              dir = th.classList.toggle('desc') ? -1 : 1;
+        [...tbody.rows]
+          .sort((a, b) => {
+            const A = isNum
+              ? parseFloat(a.cells[idx].innerText)
+              : a.cells[idx].innerText.toLowerCase();
+            const B = isNum
+              ? parseFloat(b.cells[idx].innerText)
+              : b.cells[idx].innerText.toLowerCase();
+            return (A > B ? 1 : -1) * dir;
+          })
+          .forEach(r => tbody.appendChild(r));
+      });
+    });
+
+    // quiz logic
+    document.getElementById('grade').addEventListener('click', () => {
+      let correct = 0;
+      document.querySelectorAll('#quiz .q').forEach(q => {
+        q.classList.remove('correct','incorrect');
+        const ans = q.dataset.answer;
+        const sel = q.querySelector('input:checked');
+        if (!sel) return;
+        if (sel.value === ans) {
+          q.classList.add('correct');
+          correct++;
+        } else {
+          q.classList.add('incorrect');
+          q.querySelectorAll('input').forEach(i => {
+            if (i.value === ans) i.parentNode.style.fontWeight = '700';
+          });
+        }
+      });
+      document.getElementById('score').innerText = `You scored ${correct} / 5`;
+    });
+  </script>
+
+</body>
+</html>
